Esta es la segunda version de mi repositorio

--- a/ejemplo.html
+++ b/ejemplo.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1>Ejemplo de Git</h1>
+        <h1>Nueva version del archivo 1</h1>
+        <h2>Version 2 del repositorio</h2>
     </body>
 </html>
