--- a/ejemplo.html
+++ b/ejemplo.html
@@ -11,5 +11,6 @@
         <h5>Parte de la version 3</h5>
         <h6>Nueva version</h6>
         <h4>Nuevo cambio previo a version 4</h4>
+        <h2>Nueva modificacion de codigo</h2>
     </body>
 </html>
