--- a/ejemplo.html
+++ b/ejemplo.html
@@ -13,5 +13,11 @@
         <h4>Nuevo cambio previo a version 4</h4>
         <h2>Nueva modificacion de codigo</h2>
         <h1>Nueva modificacion desde github</h1>
+        <div class="rama1">
+
+        </div>
+        <div class="rama2">
+
+        </div>
     </body>
 </html>
