Primer commit de la rama 1

--- a/ejemplo.html
+++ b/ejemplo.html
@@ -14,7 +14,8 @@
         <h2>Nueva modificacion de codigo</h2>
         <h1>Nueva modificacion desde github</h1>
         <div class="rama1">
-
+            <h1>Nuevo cambio de la rama 1</h1>
+            <h2>Segundo cambio de la rama 1</h2>
         </div>
         <div class="rama2">
 
