Modificacion de rama master

--- a/ejemplo.html
+++ b/ejemplo.html
@@ -13,6 +13,7 @@
         <h4>Nuevo cambio previo a version 4</h4>
         <h2>Nueva modificacion de codigo</h2>
         <h1>Nueva modificacion desde github</h1>
+        <h2>Modificacion en la rama master</h2>
         <div class="rama1">
 
         </div>
